# CrewAI_Udemy

./: README.md
analise_ibovespa/: pyproject.toml  recomendacoes.ipynb
analise_ibovespa/files/: ativos.csv
analise_mercado/: pyproject.toml
analise_mercado/projeto/: analise_mercado.ipynb
analise_mercado/projeto/relatorios/: artigo.html  artigo.md
analise_mercado/projeto_final/: relatorio.py
analise_mercado/projeto_final/relatorios/: relatorio_inteligencia_artificial
primeira_crew/: pyproject.toml
primeira_crew/projeto/: agente.ipynb  lendo_DotEnv.py
yaml_crews_avancadas/: pyproject.toml
yaml_crews_avancadas/projeto_novo/: pyproject.toml
yaml_crews_avancadas/projeto_novo/src/projeto_novo/: crew.py  main.py  report.md
yaml_crews_avancadas/projeto_novo/src/projeto_novo/config/: agents.yaml  tasks.yaml
yaml_crews_avancadas/projeto_novo/src/projeto_novo/output/: agents.yaml  crew.py  tasks.yaml
yaml_crews_avancadas/prompts_agents_tasks/: prompt_inicial.txt  quarto_prompt.txt  segundo_prompt.txt  terceiro_prompt.txt
