[tool.poetry]
name = "primeira-crew"
version = "0.1.0"
description = ""
authors = ["Lucas-Sobreira <lucas-andrade2011@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.5,<3.14"
crewai = "^0.148.0"
python-dotenv = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
